# Advanced-Visualization-Project

./: README.md
StudentVersion/: CMakeLists.txt  INSTALL.txt
StudentVersion/res/: Box2.ASE  dark_fighter_6.ASE
StudentVersion/src/: Application.cpp  Application.h  Camera.cpp  Camera.h  Light.cpp  Light.h  Material.cpp  Material.h  Maths.cpp  Maths.h  Mesh.cpp  Mesh.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  Utils.cpp  Utils.h  includes.h  main.cpp
StudentVersion/src/extra/: ImageLoader.cpp  ImageLoader.h  TextParser.cpp  TextParser.h
StudentVersion/src/shaders/: Fragment_1.glsl  Fragment_2.glsl  Fragment_3.glsl  Fragment_4.glsl  Fragment_5.glsl  Fragment_6.glsl  Fragment_7.glsl  Fragment_8.glsl  Fragment_9.glsl  Vertex_1.glsl  Vertex_2.glsl  Vertex_3.glsl  Vertex_4.glsl  Vertex_5.glsl  Vertex_6.glsl  Vertex_7.glsl  Vertex_8.glsl  Vertex_9.glsl
